adding initial HTML codes
adding initial HTML codes

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-ECHO is on.
+<doctype html>
+  <html>
+    <head>title>personal data</title></head>
+  <body>
+    <p>be patient and go ahead</p>
+  </body>
+      <html>
+        
