adding a phrase in HTML file

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
   <html>
     <head>title>personal data</title></head>
   <body>
-    <p>be patient and go ahead</p>
+    <p>be patient and go ahead</p><br>
+    <p>be brave and go-ahead</p>
   </body>
       <html>
         
